--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "horus-smoking",
+  "name": "smoking-house",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/swc-win32-x64-msvc": "^16.1.6",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.0.0-beta.1",
     "@supabase/ssr": "^0.8.0",
